# signalr-cpp

./: .gitmodules  LICENSE  README.md  autogen.sh  configure.ac
SignalRServer/: Helper.h  PersistentConnectionFactory.h  SignalRServer.h  SignalRServer.pro
SignalRServer/Hubs/: HubClientMessage.cpp  HubGroupList.h  HubManager.cpp  HubManager.h  HubSubscriber.cpp  HubSubscriberList.h
SignalRServer/Messaging/: ClientMessage.cpp  ClientMessage.h  Subscriber.h
SignalRServer/Transports/: LongPollingTransport.cpp
src/: Makefile.am
src/SignalRServer/: GarbageCollector.cpp  GarbageCollector.h  Helper.cpp  Helper.h  Log.cpp  Log.h  Makefile.am  PersistentConnection.cpp  PersistentConnection.h  PersistentConnectionFactory.cpp  PersistentConnectionFactory.h  Request.cpp  Request.h  SignalRServer.cpp  SignalRServer.h  SignalRServer.pro
src/SignalRServer/Doc/: SignalR-Server-C++ Classes.xlsx  SignalR-Server-C++ Workflow.pptx  SignalR-Server-C++.docx
src/SignalRServer/Hubs/: Group.cpp  Group.h  Hub.cpp  Hub.h  HubClientMessage.h  HubDispatcher.cpp  HubDispatcher.h  HubFactory.cpp  HubFactory.h  HubGroupList.cpp  HubGroupList.h  HubManager.cpp  HubSubscriber.cpp  HubSubscriber.h  HubSubscriberList.cpp  HubSubscriberList.h  MessageInfo.txt
src/SignalRServer/Messaging/: ClientMessage.cpp  ClientMessage.h  Subscriber.cpp  Subscriber.h  SubscriberList.cpp  SubscriberList.h
src/SignalRServer/Transports/: LongPollingTransport.cpp  LongPollingTransport.h  ServerSentEventsTransport.cpp  ServerSentEventsTransport.h  Transport.cpp  Transport.h
