lib_LTLIBRARIES = libsignalr_server_cpp.la

LIB_SRC = 	SignalRServer.cpp \
		PersistentConnection.cpp \
		Request.cpp \
		PersistentConnectionFactory.cpp \
		Helper.cpp \
		Log.cpp \
		Hubs/HubDispatcher.cpp \
		Hubs/Hub.cpp \
		Hubs/HubFactory.cpp \
		Messaging/ClientMessage.cpp \
		Hubs/HubSubscriber.cpp \
		Hubs/HubManager.cpp \
		Messaging/SubscriberList.cpp \
		Transports/Transport.cpp \
		Transports/LongPollingTransport.cpp \
		Messaging/Subscriber.cpp \
		Hubs/HubSubscriberList.cpp \
		Hubs/HubClientMessage.cpp \
		Hubs/HubGroupList.cpp \
		Hubs/Group.cpp \
		SignalRServer.h \
		PersistentConnection.h \
		Request.h \
		PersistentConnectionFactory.h \
		Helper.h \
		Log.h \
		Hubs/HubDispatcher.h \
		Hubs/Hub.h \
		Hubs/HubFactory.h \
		Messaging/ClientMessage.h \
		Hubs/HubSubscriber.h \
		Hubs/HubManager.h \
		Messaging/SubscriberList.h \
		Transports/Transport.h \
		Transports/LongPollingTransport.h \
		Messaging/Subscriber.h \
		Hubs/HubSubscriberList.h \
		Hubs/HubClientMessage.h \
		Hubs/HubGroupList.h \
		Hubs/Group.h

EXTRA_DIST = $(LIB_SRC)

AM_CPPFLAGS = -std=c++11
AM_LDFLAGS = 

libsignalr_server_cpp_CFLAGS = $(AM_CFLAGS)
libsignalr_server_cpp_LDFLAGS = $(LTLDFLAGS)
libsignalr_server_cpp_SOURCE = $(LIB_SRC)

hdrdir = $(includedir/libsignalr_server_cpp-1.0
hdr_HEADERS = SignalRServer.h \
    PersistentConnection.h \
    Request.h \
    PersistentConnectionFactory.h \
    Helper.h \
    Log.h \
    Hubs/HubDispatcher.h \
    Hubs/Hub.h \
    Hubs/HubFactory.h \
    Messaging/ClientMessage.h \
    Hubs/HubSubscriber.h \
    Hubs/HubManager.h \
    Messaging/SubscriberList.h \
    Transports/Transport.h \
    Transports/LongPollingTransport.h \
    Messaging/Subscriber.h \
    Hubs/HubSubscriberList.h \
    Hubs/HubClientMessage.h \
    Hubs/HubGroupList.h \
    Hubs/Group.h

